SecurityPkg.ci.yaml: Add UefiCpuPkg in Dependencies
Since SecTpmMeasurementLib depends on UefiCpuPkg,
UefiCpuPkg should be added to the AcceptableDependencies.

Cc: Jiewen Yao <jiewen.yao@intel.com>
Signed-off-by: Min Xu <min.m.xu@intel.com>
Signed-off-by: Ceping Sun <cepingx.sun@intel.com>

--- a/SecurityPkg/SecurityPkg.ci.yaml
+++ b/SecurityPkg/SecurityPkg.ci.yaml
@@ -51,6 +51,7 @@
             "UnitTestFrameworkPkg/UnitTestFrameworkPkg.dec",
             "SecurityPkg/SecurityPkg.dec",
             "StandaloneMmPkg/StandaloneMmPkg.dec",
+            "UefiCpuPkg/UefiCpuPkg.dec",
             "CryptoPkg/CryptoPkg.dec"
         ],
         # For host based unit tests
